syntax ="proto3";
option go_package = "github.com/muaj07/grpc-tutorial/invoicer";
package invoicer_service;


message Amount{
    int64 amount = 1;
    string currency =2;
}

message CreateRequest {
    Amount amount = 1;
    string from = 2;
    string to=3;
}

message CreateResponse{
    string message = 1;
}

message NameList{
    repeated string names = 1;
}

message MessageList{
    repeated string message = 1;
}


service Invoicer {
    rpc Create (CreateRequest) returns (CreateResponse);

    rpc CreateServerStreaming(NameList) returns (stream CreateResponse);

    rpc CreateClientStreaming(stream CreateRequest) returns(MessageList);
    
    rpc CreateBidirectionalStreaming(stream CreateRequest) returns (stream CreateResponse);
}